--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bground"
     android:orientation="vertical"
     >
 
@@ -13,9 +14,9 @@
         android:layout_weight="1"/>
 
     <LinearLayout
+        android:background="#8810B4B6"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="#e6e0e0"
+        android:layout_height="50dp"
         android:orientation="horizontal"
         >
 
