--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bground"
+    android:background="@drawable/app_bg8"
     android:orientation="vertical"
     >
 
@@ -14,7 +14,7 @@
         android:layout_weight="1"/>
 
     <LinearLayout
-        android:background="#8810B4B6"
+
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:orientation="horizontal"
