--- a/app/src/main/res/layout/item_zhihu_stories.xml
+++ b/app/src/main/res/layout/item_zhihu_stories.xml
@@ -14,28 +14,30 @@
     card_view:cardPreventCornerOverlap="true"
     card_view:cardUseCompatPadding="true"
     >
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-       >
+        >
+
         <ImageView
-            android:scaleType="centerCrop"
             android:id="@+id/iv_stories_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_gravity="center"
+            android:scaleType="centerCrop"
             />
+
         <TextView
             android:id="@+id/tv_stories_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:gravity="center_vertical"
-            android:textColor="@color/white"
             android:background="@color/trangery"
-            android:textStyle="bold"
-            android:padding="5dp"/>
-
+            android:gravity="center_vertical"
+            android:padding="5dp"
+            android:textColor="@color/white"
+            />
 
 
     </RelativeLayout>
