--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,12 +7,13 @@
 
 
     <color name="colorTextAssistant">#888888</color>
+    <color name="colorTextStar">#20888888</color>
     <color name="colorBackgroundDark">#f2f2f2</color>
     <color name="white">#FFFFFF</color>
     <color name="gery">#FAFAFA</color>
     <color name="darkgery">#797979</color>
     <color name="trangery">#512e2e2e</color>
     <color name="black">#252525</color>
-
+    <color name="yellow">#f7f304</color>
 
 </resources>
